# querytheplanet

./: .gitignore  README.md  pyproject.toml
src/querytheplanet/: __init__.py  cli.py  query.py
tests/: conftest.py  test_query.py
tests/data/: results.csv
